Version 0.12.0
* fixed locking issue on IE (2991747, reported by deroock)
* fixed unparsed option during WSIF export (M.Ellison)
* fixed some issues with WSIF external loading
* new tables syntax (FBNil)
* reorganized Special::Advanced
* removed import code for WoaS < 0.9.x
* refresh CSS after XHTML import

Version 0.11.9 (legolas558) released 2010-04-22
* fixed tail removal
* fix data corruption issue and title missing on IE
* debug check for DOM data not correctly retrieved
* use CRLF in nowiki preformatted blocks under IE
* do not display "BUG" log lines for locking
* fixed CSS not imported issue (reported by littlegirl, found by M.Ellison,akazia)
* fixed corruption on save issue

Version 0.11.8 (legolas558) released 2010-04-21
* fixed loading overlay not hidden when changing debug mode
* fixed deleted WoaS namespace from reserved list

Version 0.11.7 (legolas558) released 2010-04-20
* added foldable listing options
* keep log area scrolled to bottom (suggested by S.Tunis)
* WSIF datasource mode implemented

Version 0.11.6 (legolas558) released 2010-04-16
* lot of fixes for active Safari support
* fixed saving issue on IE browsers (found by Akazia,deroock)

Version 0.11.5 (legolas558) released 2010-04-15
* fixed nowiki newline bug
* fixed custom scripts bug
* fixed Safari/Chrome CSS issues

Version 0.11.4 (legolas558) released 2010-04-14
* fixed import issue
* renamed CSS classes: wiki_toc -> woas_toc, wiki_toc_title -> woas_toc_title, embedded -> woas_embedded
* foldable namespace listing is now collapsed by default

Version 0.11.3 (legolas558) released 2010-04-14
* updated documentation to reflect CSS changes
* improved remember history option (pvhl,legolas558)
* logo fixes for IE (pvhl)
* optimization for CSS during save operation
* disable import features when WoaS is read-only
* allow IE8 features when useragent tells it is IE6 (deroock)
* editable reserved pages not shown in Special::Recentchanges (reported by deroock)